# inkling

./: .env.example  .gitattributes  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  constants.ts  fileio.ts  fonts.ts  main.tsx  persistence.ts  platform.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: Editor.tsx  ExportDialog.tsx  HelpPanel.tsx  NotationPicker.tsx  Preview.tsx  Toolbar.tsx
apps/desktop/src/export/: index.ts
apps/desktop/src/lang/: ink.ts
apps/desktop/src/theme/: styles.css  tokens.css
apps/desktop/src/util/: base64.test.ts  base64.ts
docs/: DSL.md
examples/: README.md  construction-safety.ink  data-structures.ink  flowchart.ink  library.ink  specialization.ink  university-ternary.ink
scripts/: generate-icon.mjs  install-macos.sh
