[package]
name = "inkling"
version = "0.1.0"
description = "Inkling — a code-to-diagram ER editor"
authors = ["Inkling contributors"]
license = "MIT"
repository = "https://github.com/regaj/inkling"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "inkling_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-decorum = "1"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
